--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p>---------------mongodb操作--------------------</p>
+    <p>---------------mongodb操作-------------------</p>
     <form name="myForm" action="/input" method="GET">
         数据1：<input type="text" name="first"><br>
         数据2：<input type="text" name="second"><br>
